--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-danger text-white navbar-dark ">
+<nav class="navbar navbar-expand-lg bg-success text-white navbar-dark ">
     <div class="container-fluid">
         <a class="navbar-brand" [routerLink]="['/']">Recipes</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,7 +15,7 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light text-black " type="submit">Search</button>
+          <button class="btn btn-outline-light text-white" type="submit">Search</button>
         </form>
       </div>
     </div>
