--- a/src/app/recipes/cart-list/cart-list.component.html
+++ b/src/app/recipes/cart-list/cart-list.component.html
@@ -1,30 +1,38 @@
-<div class="row">
-    <div class="col">
-        @if ((cart$| async)?.length != 0) {
-        <div class="table table-stripe">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Quantity</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (item of (cart$ | async); track $index) {
+<div class="container mt-4">
+    <div class="row">
+        <div class="col">
+            @if ((cart$| async)?.length != 0) {
+            <table class="table table-stripe">
+                <thead>
                     <tr>
-                        <td>{{item.id}}</td>
-                        <td>{{item.title}}</td>
-                        <td>1</td>
-                       
-
+                        <th>Id</th>
+                        <th>Title</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                        <th>Total</th>
                     </tr>
-                }
-            </tbody>
+                </thead>
+                <tbody>
+                    @for (item of (cart$ | async); track $index) {
+                        <tr>
+                            <td>{{item.id}}</td>
+                            <td>{{item.title}}</td>
+                            <td>
+                                <input type="number" step="any" min="1"
+                                class="form-control " name="quantity" 
+                                [(ngModel)]="item.quantity">
+                            </td>
+                            <td>{{item.price}}</td>
+                            <td>{{item.total | number:'1.2-2'}}</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+            <p>Total :: ${{total | number:'1.2-2'}}</p>
+        }
+        @else {
+            <h1 class="text-center text-danger ">No Content Found</h1>
+        }
         </div>
-    }
-    @else {
-        <h1 class="text-center text-danger ">No Content Found</h1>
-    }
     </div>
 </div>
